--- a/build.gradle
+++ b/build.gradle
@@ -211,8 +211,6 @@ subprojects {
     	name project.name
     	description project.description
     	inceptionYear '2007'
-    	//packaging 'jar' // does not work, fixed below
-    	// See https://issues.gradle.org/browse/GRADLE-1200
 
     	scm {
     		connection 'scm:git:git://github.com/huxi/lilith.git'
@@ -246,34 +244,10 @@ subprojects {
 		}
 		
 		issueManagement {
-			system 'trac'
-			url 'http://apps.sourceforge.net/trac/lilith/'
+			system 'Github'
+			url 'https://github.com/huxi/lilith/issues'
 		}
-		
-		mailingLists {
-			mailingList {
-				name 'Announce List'
-				subscribe 'lilith-announce-join@lists.sourceforge.net'
-				unsubscribe 'lilith-announce-leave@lists.sourceforge.net'
-				post 'lilith-announce@lists.sourceforge.net'
-				archive 'http://sourceforge.net/mailarchive/forum.php?forum_name=lilith-announce'
-			}
-			mailingList {
-				name 'User List'
-				subscribe 'lilith-user-join@lists.sourceforge.net'
-				unsubscribe 'lilith-user-leave@lists.sourceforge.net'
-				post 'lilith-user@lists.sourceforge.net'
-				archive 'http://sourceforge.net/mailarchive/forum.php?forum_name=lilith-user'
-			}
-			mailingList {
-				name 'Developer List'
-				subscribe 'lilith-devel-join@lists.sourceforge.net'
-				unsubscribe 'lilith-devel-leave@lists.sourceforge.net'
-				post 'lilith-devel@lists.sourceforge.net'
-				archive 'http://sourceforge.net/mailarchive/forum.php?forum_name=lilith-devel'
-			}
-		}
-		
+
 		developers {
 			developer {
 				id 'huxhorn'
@@ -329,38 +303,6 @@ subprojects {
 	installer.pom.project defaultProject
 	
 	deployer.pom.project defaultProject
-
-	// The following fixes the broken packaging
-	// See https://issues.gradle.org/browse/GRADLE-1200
-	// Thanks xlson
-	/*
-	installer.pom.withXml { XmlProvider xmlProvider ->
-		def xml = xmlProvider.asString()
-		def pomXml = new XmlParser().parseText(xml.toString())
-
-		pomXml.version[0] + { packaging('jar') }
-
-		def newXml = new StringWriter()
-		def printer = new XmlNodePrinter(new PrintWriter(newXml))
-		printer.preserveWhitespace = true
-		printer.print(pomXml)
-		xml.setLength(0)
-		xml.append(newXml.toString())
-	}
-	deployer.pom.withXml { XmlProvider xmlProvider ->
-		def xml = xmlProvider.asString()
-		def pomXml = new XmlParser().parseText(xml.toString())
-
-		pomXml.version[0] + { packaging('jar') }
-
-		def newXml = new StringWriter()
-		def printer = new XmlNodePrinter(new PrintWriter(newXml))
-		printer.preserveWhitespace = true
-		printer.print(pomXml)
-		xml.setLength(0)
-		xml.append(newXml.toString())
-	}
-	*/
 }
 
 project(':lilith') {
