--- a/sandbox/jul-sandbox/build.gradle
+++ b/sandbox/jul-sandbox/build.gradle
@@ -4,8 +4,7 @@ apply from: '../sandboxDefaults.gradle'
 apply plugin: 'application'
 apply plugin: 'idea'
 
-mainClassName = 'de.huxhorn.lilith.sandbox.Log4jSandbox'
+mainClassName = 'de.huxhorn.lilith.sandbox.JulSandbox'
 
 dependencies {
-	compile libraries.'log4j'
 }
