--- a/sandbox/logback-classic-sandbox/build.gradle
+++ b/sandbox/logback-classic-sandbox/build.gradle
@@ -2,6 +2,7 @@ apply from: '../../dependencyDefinitions.gradle'
 apply from: '../sandboxDefaults.gradle'
 
 apply plugin: 'application'
+apply plugin: 'idea'
 
 mainClassName = 'de.huxhorn.lilith.sandbox.LogbackClassicSandbox'
 
