--- a/lilith/src/main/resources/main.properties
+++ b/lilith/src/main/resources/main.properties
@@ -1,5 +1,6 @@
 main.class=de.huxhorn.lilith.Lilith
 java.version=1.8.0_66
+ignore.pre.release.identifier=true
 # system.exit=true
 # show.error.dialog=true
 # unknown.version.fail=false
