--- a/lilith/src/main/resources/main.properties
+++ b/lilith/src/main/resources/main.properties
@@ -1,6 +1,7 @@
 main.class=de.huxhorn.lilith.Lilith
-java.version=1.8.0_66
+java.version=1.8.0_72
 ignore.pre.release.identifier=true
+show.error.dialog=false
+show.warning.dialog=true
 # system.exit=true
-# show.error.dialog=true
 # unknown.version.fail=false
