--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.14.1-rc-2'
+	gradleVersion = '2.14.1'
 }
 
 def copyright = "Copyright \u00a9 2007-2016 J\u00f6rn Huxhorn"
