Added lots of filter tests.
- Removed unused methods getTextColor(), getBackgroundColor() and getBorderColor() of class SavedCondition.
- Removed unused c'tors in AbstractFilterAction, AbstractLoggingFilterAction and AbstractAccessFilterAction.

--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -582,6 +582,8 @@ project(':lilith') {
 		runtime project(':lilith-sounds')
 		testCompile project(':lilith-data-corpus')
 		testCompile libraries.'sulky-junit'
+		testRuntime libraries.'cglib-nodep'
+		testRuntime libraries.'objenesis'
 	}
 }
 
