--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -65,6 +65,7 @@ project.ext.libraries = [
 'logback-classic':          "ch.qos.logback:logback-classic:${versions.logback}",
 'logback-core':             "ch.qos.logback:logback-core:${versions.logback}",
 'macify':                   'org.simplericity.macify:macify:1.6',
+'objenesis':                'org.objenesis:objenesis:2.4',
 'protobuf':                 'com.google.protobuf:protobuf-java:3.1.0',
 'rrd4j':                    'org.rrd4j:rrd4j:2.2.1',
 'servlet-api':              'javax.servlet:javax.servlet-api:3.1.0',
