--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
 		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
 		classpath 'gradle.plugin.edu.sc.seis:macAppBundle:2.1.6'
+		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
 	}
 }
 
@@ -116,9 +117,9 @@ gradle.taskGraph.whenReady { taskGraph ->
 }
 
 if(!System.properties.'release' && !System.properties.'prerelease') {
-	defaultTasks 'build', 'uploadPublished', 'jarAll', 'myDistZip', 'myDistTgz', 'appTgz'
+	defaultTasks 'build', 'uploadPublished', 'shadowJar', 'myDistZip', 'myDistTgz', 'appTgz'
 } else {
-	defaultTasks 'build', 'uploadPublished', 'jarAll', 'myDistZip', 'myDistTgz', 'appTgz', 'signJavadocZip', 'signSourceZip'
+	defaultTasks 'build', 'uploadPublished', 'shadowJar', 'myDistZip', 'myDistTgz', 'appTgz', 'signJavadocZip', 'signSourceZip'
 }
 
 allprojects {
@@ -318,6 +319,7 @@ project(':lilith') {
 	apply plugin: 'application'
 	apply plugin: de.huxhorn.gradle.git.GitStatePlugin
 	apply plugin: 'edu.sc.seis.macAppBundle'
+	apply plugin: 'com.github.johnrengelman.shadow'
 
 /*
 ### macappbundle
@@ -450,29 +452,6 @@ project(':lilith') {
 		}
 	}
 
-	task jarAll(dependsOn: configurations.default.allArtifacts.buildDependencies, type: Jar) {
-		description = 'Creates a shaded/uberjar/fatjar of the application.'
-		classifier = 'all'
-
-		manifest.attributes(
-			'Main-Class': "${mainClassName}"
-		)
-
-		from (sourceSets.main.output.classesDir)
-		from (sourceSets.main.output.resourcesDir)
-
-		doFirst {  // <- note the doFirst
-			// the following must be executed in doFirst since the configuration
-			// has not been initialized at configuration time
-			from (configurations.runtime.resolve().collect { it.isDirectory() ? it : zipTree(it) }) {
-				exclude 'META-INF/MANIFEST.MF'
-				exclude 'META-INF/*.SF'
-				exclude 'META-INF/*.DSA'
-				exclude 'META-INF/*.RSA'
-			}
-		}
-	}
-
 	task myDistZip(dependsOn: configurations.default.allArtifacts.buildDependencies, type: Zip) {
 		description = 'Creates a ZIP containing the Lilith distribution.'
 		classifier = 'bin'
@@ -495,7 +474,7 @@ project(':lilith') {
 
 	signing {
 		required = { !version.endsWith("SNAPSHOT") }
-		sign jarAll
+		sign shadowJar
 		sign myDistZip
 		sign myDistTgz
 		sign appTgz
