--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.7.1'
 		classpath 'gradle.plugin.edu.sc.seis:macAppBundle:2.1.6'
 		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+		classpath 'de.thetaphi:forbiddenapis:2.2'
 	}
 }
 
@@ -166,6 +167,20 @@ subprojects {
 	apply plugin: 'groovy'
 	apply plugin: 'maven'
 	apply plugin: 'signing'
+	apply plugin: 'de.thetaphi.forbiddenapis'
+
+	forbiddenApis {
+		bundledSignatures = [
+			'jdk-unsafe-1.8',
+			'jdk-deprecated-1.8',
+			'jdk-internal-1.8',
+			'jdk-non-portable',
+			//'jdk-system-out',
+			'jdk-reflection',
+			//'commons-io-unsafe-2.5',
+			]
+		ignoreFailures = false
+	}
 
 	jacocoTestReport {
 		additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
