failOnUnresolvableSignatures of forbiddenApis

--- a/build.gradle
+++ b/build.gradle
@@ -191,6 +191,7 @@ subprojects {
 			//'commons-io-unsafe-2.5',
 			]
 		ignoreFailures = false
+		//failOnUnresolvableSignatures = false
 	}
 
 	jacocoTestReport {
