--- a/sandbox/logback-access-sandbox/build.gradle
+++ b/sandbox/logback-access-sandbox/build.gradle
@@ -7,17 +7,17 @@ buildscript {
 	}
 
 	dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.3.RELEASE")
     }
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.13'
+	gradleVersion = '3.3-rc-1'
 }
 
 apply plugin: 'idea'
 apply plugin: 'java'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 version = '1.0.0-SNAPSHOT'
 
@@ -27,7 +27,7 @@ dependencies {
 	runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.appender.multiplex-classic:${lilithVersion}"
 	runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.encoder.access:${lilithVersion}"
 	runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.encoder.classic:${lilithVersion}"
-	runtime 'net.rakugakibox.springbootext:spring-boot-ext-logback-access:1.4'
+	runtime 'net.rakugakibox.springbootext:spring-boot-ext-logback-access:1.6'
 	runtime libraries.'logback-access'
 	runtime libraries.'logback-classic'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
