--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '3.3-rc-1'
+	gradleVersion = '3.3'
 }
 
 def copyright = "Copyright \u00a9 2007-2016 J\u00f6rn Huxhorn"
