This fixes #27. Enable graphics switching on Mac.

--- a/build.gradle
+++ b/build.gradle
@@ -380,6 +380,7 @@ project(':lilith') {
 			'CFBundleShortVersionString': version,
 			//'CFBundleGetInfoString': copyright,
 			'NSHumanReadableCopyright': copyright,
+			'NSSupportsAutomaticGraphicsSwitching': true,
 		]
 		javaProperties = [
 			'apple.laf.useScreenMenuBar': 'true'
