--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -54,6 +54,7 @@ project.ext.libraries = [
 'jackson-databind':         "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.64',
 'jgoodies-looks':           'com.jgoodies:jgoodies-looks:2.7.0',
+'jul-to-slf4j':             "org.slf4j:jul-to-slf4j:${versions.slf4j}",
 'junique':                  'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.2',
 'junit':                    'junit:junit:4.12',
 'log4j':                    "log4j:log4j:${versions.log4j}",
