--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -33,14 +33,15 @@ project.ext.libraries = [
 'commons-io':               'commons-io:commons-io:2.5',
 'commons-lang':             'org.apache.commons:commons-lang3:3.5',
 //'disruptor':                'com.lmax:disruptor:3.3.0',
-// regression in 9.0.7:
+// regression in 9.0.7 - 9.1.1:
 // https://code.google.com/p/flying-saucer/issues/detail?id=262
 // https://archive.is/lvkBt
-// regression in 9.0.9:
+// Also:
 //   NPE at org.xhtmlrenderer.resource.XMLResource$XMLResourceBuilder.createXMLResource(XMLResource.java:189)
 //   while clicking on links in help.
+//   This is the same regression because those links are relative like the CSS in the original issue.
 // https://github.com/flyingsaucerproject/flyingsaucer
-//'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.0.9',
+//'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.1.1',
 'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.0.6',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.9.1',
 'groovy':                   "org.codehaus.groovy:groovy:${versions.groovy}",
