--- a/sandbox/logback-classic-sandbox/build.gradle
+++ b/sandbox/logback-classic-sandbox/build.gradle
@@ -10,5 +10,8 @@ dependencies {
 	compile libraries.'logback-classic'
 	runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.encoder.classic:${lilithVersion}"
 	runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.appender.multiplex-classic:${lilithVersion}"
+	//compile 'ch.qos.logback:logback-classic:1.2.1'
+	//runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.encoder.classic:8.1.0"
+	//runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.appender.multiplex-classic:8.1.0"
 }
 
