--- a/sandbox/logback-access-sandbox/gradle/wrapper/gradle-wrapper.properties
+++ b/sandbox/logback-access-sandbox/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jan 27 14:54:26 CET 2017
+#Sun Apr 09 12:52:42 CEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-rc-1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-bin.zip
