--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -18,7 +18,7 @@ project.ext.versions = [
 'log4j2':         '2.8.2',
 'logback':        '1.2.3',
 'slf4j':          '1.7.25',
-'spock':          '1.0-groovy-2.4',
+'spock':          '1.1-groovy-2.4-rc-4',
 'spring':         '4.3.7.RELEASE',
 'sulky':          sulkyVersion,
 'thymeleaf':      '2.1.5.RELEASE',
