--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -31,6 +31,7 @@ project.ext.libraries = [
 'cglib-nodep':              'cglib:cglib-nodep:3.2.5',
 'commons-io':               'commons-io:commons-io:2.5',
 'commons-lang':             'org.apache.commons:commons-lang3:3.6',
+'commons-text':             'org.apache.commons:commons-text:1.1',
 //'disruptor':                'com.lmax:disruptor:3.3.0',
 'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.1.6',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.9.1',
