--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -515,6 +515,7 @@ project(':lilith') {
 	dependencies {
 		compile libraries.'commons-io'
 		compile libraries.'commons-lang'
+		compile libraries.'commons-text'
 		compile libraries.'flyingsaucer'
 		compile libraries.'glazedlists'
 		compile libraries.'groovy'
