--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -15,7 +15,7 @@ project.ext.versions = [
 'jackson':        '2.9.0',
 'jacksonModule':  '2.9.0',
 'log4j':          '1.2.17',
-'log4j2':         '2.8.2',
+'log4j2':         '2.9.0',
 'logback':        '1.2.3',
 'slf4j':          '1.7.25',
 'spock':          '1.1-groovy-2.4',
@@ -43,6 +43,8 @@ project.ext.libraries = [
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 'jackson-afterburner':      "com.fasterxml.jackson.module:jackson-module-afterburner:${versions.jacksonModule}",
 'jackson-databind':         "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
+'jackson-dataformat-xml':   "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${versions.jackson}",
+'jackson-dataformat-yaml':  "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.72',
 'jul-to-slf4j':             "org.slf4j:jul-to-slf4j:${versions.slf4j}",
 'junique':                  'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.4',
