--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -417,6 +417,33 @@ project(':converter-log4j2') {
 	}
 }
 
+project(':decoder-log4j2') {
+	archivesBaseName = 'de.huxhorn.lilith.log4j2.decoder'
+	description = 'This file is part of Lilith. It contains the LOG4J 2 Decoders.'
+	dependencies {
+		compile project(':converter-log4j2')
+		compile libraries.'slf4j-api'
+		compile libraries.'log4j2-core'
+		runtime libraries.'jackson-databind'
+		runtime libraries.'jackson-dataformat-xml'
+		runtime libraries.'jackson-dataformat-yaml'
+	}
+}
+
+project(':producer-log4j2') {
+	archivesBaseName = 'de.huxhorn.lilith.log4j2.producer'
+	description = 'This file is part of Lilith. It contains the LOG4J 2 Producers.'
+	dependencies {
+		compile project(':decoder-log4j2')
+		compile project(':lilith-engine')
+		compile libraries.'slf4j-api'
+		compile libraries.'log4j2-core'
+		runtime libraries.'jackson-databind'
+		runtime libraries.'jackson-dataformat-xml'
+		runtime libraries.'jackson-dataformat-yaml'
+	}
+}
+
 project(':jul-xml') {
 	archivesBaseName = 'de.huxhorn.lilith.jul.xml'
 	description = 'This file is part of Lilith. It contains java.util.logging XML I/O.'
@@ -567,6 +594,7 @@ project(':lilith') {
 		compile project(':logback-multiplex-appender-classic')
 		compile project(':logback-multiplex-appender-classic-json')
 		compile project(':logback-multiplex-appender-classic-xml')
+		compile project(':producer-log4j2')
 		runtime libraries.'jcl-over-slf4j'
 		runtime libraries.'log4j2-core'
 		// 'spring-boot-ext-logback-access' and 'spring-webmvc' should not be necessary
