Use byte-buddy in spock tests.
See https://github.com/cglib/cglib/issues/106

--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -28,6 +28,7 @@ project.ext.versions = [
 project.ext.libraries = [
 'aspectjrt':                "org.aspectj:aspectjrt:${versions.aspectj}",
 'aspectjweaver':            "org.aspectj:aspectjweaver:${versions.aspectj}",
+'byte-buddy':               'net.bytebuddy:byte-buddy:1.7.5',
 'cglib-nodep':              'cglib:cglib-nodep:3.2.5',
 'commons-io':               'commons-io:commons-io:2.5',
 'commons-lang':             'org.apache.commons:commons-lang3:3.6',
