--- a/build.gradle
+++ b/build.gradle
@@ -310,11 +310,12 @@ subprojects {
 	}
 
 	dependencies {
+		testCompile libraries.'byte-buddy'
 		testCompile libraries.'groovy'
 		testCompile libraries.'spock-core', {
 			exclude group: 'org.codehaus.groovy', module: 'groovy-all' 
 		}
-		testCompile libraries.junit
+		testCompile libraries.'junit'
 		testCompile libraries.'slf4j-api'
 		testRuntime libraries.'logback-classic'
 	}
