--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,4 @@ after_success:
   - ./gradlew --stacktrace cleanTest
   - ./gradlew --stacktrace jacocoRootReport
   - ./gradlew --stacktrace coveralls
+  - bash <(curl -s https://codecov.io/bash)
